<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="andrew.studio.com.ultrabuddymvvm.ui.about.AboutViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/layout_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" android:paddingStart="8dp"
                android:paddingEnd="8dp">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:id="@+id/text_name"
                    android:text="@string/text_intro_my_name" android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/image_avatar" android:layout_marginTop="16dp"/>
            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/image_avatar"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/text_intro_avatar_desc"/>
            <TextView
                    android:text="@string/text_intro_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_class"
                    app:layout_constraintTop_toBottomOf="@+id/text_name" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="24dp" android:padding="8dp"
                    android:background="@drawable/gray_rounded_background" android:textColor="@color/black"
                    android:textSize="16sp"/>

            <TextView
                    android:text="@string/text_intro_school_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_school_year"
                    app:layout_constraintTop_toBottomOf="@+id/text_class" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp" android:padding="8dp"
                    android:background="@drawable/gray_rounded_background" android:textColor="@color/black"
                    android:textSize="16sp"/>

            <TextView
                    android:text="@string/text_intro_hobbies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_hobbies"
                    app:layout_constraintTop_toBottomOf="@+id/text_school_year"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp" android:padding="8dp"
                    android:background="@drawable/gray_rounded_background" android:textColor="@color/black"
                    android:textSize="16sp"/>

            <TextView
                    android:text="@string/text_intro_ambition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_ambition"
                    app:layout_constraintTop_toBottomOf="@+id/text_hobbies" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp" android:padding="8dp"
                    android:background="@drawable/gray_rounded_background" android:textColor="@color/black"
                    android:textSize="16sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_scroll_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/red"
                app:fabSize="auto"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onClickContactFab()}"
                android:focusable="true"
                app:icon="@drawable/ic_email_white_24dp"
                app:iconTint="#FFFFFF"
                android:text="@string/text_contact_me"
                android:textColor="@color/white" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>